--- a/views/layout.ejs
+++ b/views/layout.ejs
@@ -65,7 +65,16 @@
                     <ul class="js-clone-nav d-none d-lg-inline-block text-start site-menu mx-auto">
                       <li class="active"><a href="/">Home</a></li>
                       <li class="has-children">
-                        <a href="/">카테고리</a>
+                        <a href="/">Blog</a>
+                        <ul class="dropdown">
+                          <li><a href="/blog">Blog All</a></li>
+                        </ul>
+                      </li>
+                      <li><a href="/about">About Us</a></li>
+                      <li><a href="/contact">Contact Us</a></li>
+                      
+                      <!-- <li class="has-children">
+                        <a href="/">카테고리 예시</a>
                         <ul class="dropdown">
                           <li><a href="/blog.html">Blog</a></li>
                           <li><a href="/single.html">Blog Single</a></li>
@@ -80,12 +89,10 @@
                               <li><a href="#">Sub Menu Two</a></li>
                               <li><a href="#">Sub Menu Three</a></li>
                             </ul>
-                          </li>
+                          </li> -->
                         </ul>
                       </li>
-                      <li><a href="/">기능1</a></li>
-                      <li><a href="/">기능2</a></li>
-                      <li><a href="/">Contact Us</a></li>
+
                     </ul>
 
 
