--- a/views/blog/view.ejs
+++ b/views/blog/view.ejs
@@ -10,6 +10,10 @@
               <figure class="author-figure mb-0 me-3 d-inline-block"><img src="/images/person_1.jpg" alt="Image" class="img-fluid"></figure>
               <span class="d-inline-block mt-1">By Carl Atkinson</span>
               <span>&nbsp;-&nbsp; <%= moment(v.postInfo.REG_DATE).format("YYYY-MM-DD") %></span>
+              <a href="/blog/mod/<%=v.postInfo.POST_ID%>" style="color: white;">&nbsp;-&nbsp;수정</a>
+              <a href="/blog/del/<%=v.postInfo.POST_ID%>" id="deletePost" style="color: white;">&nbsp;-&nbsp;삭제</a>
+              <input type="hidden" id="postId" value="<%=v.postInfo.POST_ID%>">
+
             </div>
           </div>
         </div>
@@ -30,7 +34,7 @@
                 <img src="/images/hero_1.jpg" alt="Image placeholder" class="img-fluid rounded">
               </div>
             </div>
-            <p><%=v.postInfo.CONTENTS%></p>
+            <p ><%-v.postInfo.CONTENTS%></p>
           </div>
 
 
@@ -89,36 +93,10 @@
                           <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Pariatur quidem laborum necessitatibus, ipsam impedit vitae autem, eum officia, fugiat saepe enim sapiente iste iure! Quam voluptas earum impedit necessitatibus, nihil?</p>
                           <p><a href="#" class="reply rounded">Reply</a></p>
                         </div>
-
-                        <ul class="children">
-                          <li class="comment">
-                            <div class="vcard">
-                              <img src="/images/person_5.jpg" alt="Image placeholder">
-                            </div>
-                            <div class="comment-body">
-                              <h3>Jean Doe</h3>
-                              <div class="meta">January 9, 2018 at 2:21pm</div>
-                              <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Pariatur quidem laborum necessitatibus, ipsam impedit vitae autem, eum officia, fugiat saepe enim sapiente iste iure! Quam voluptas earum impedit necessitatibus, nihil?</p>
-                              <p><a href="#" class="reply rounded">Reply</a></p>
-                            </div>
-                          </li>
-                        </ul>
                       </li>
                     </ul>
                   </li>
                 </ul>
-              </li>
-
-              <li class="comment">
-                <div class="vcard">
-                  <img src="/images/person_1.jpg" alt="Image placeholder">
-                </div>
-                <div class="comment-body">
-                  <h3>Jean Doe</h3>
-                  <div class="meta">January 9, 2018 at 2:21pm</div>
-                  <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Pariatur quidem laborum necessitatibus, ipsam impedit vitae autem, eum officia, fugiat saepe enim sapiente iste iure! Quam voluptas earum impedit necessitatibus, nihil?</p>
-                  <p><a href="#" class="reply rounded">Reply</a></p>
-                </div>
               </li>
             </ul>
             <!-- END comment-list -->
@@ -258,60 +236,15 @@
     </div>
   </section>
 
-
-  <!-- Start posts-entry -->
-  <section class="section posts-entry posts-entry-sm bg-light">
-    <div class="container">
-      <div class="row mb-4">
-        <div class="col-12 text-uppercase text-black">More Blog Posts</div>
-      </div>
-      <div class="row">
-        <div class="col-md-6 col-lg-3">
-          <div class="blog-entry">
-            <a href="/single.html" class="img-link">
-              <img src="/images/img_1_horizontal.jpg" alt="Image" class="img-fluid">
-            </a>
-            <span class="date">Apr. 14th, 2022</span>
-            <h2><a href="/single.html">Thought you loved Python? Wait until you meet Rust</a></h2>
-            <p>Lorem ipsum dolor sit amet consectetur adipisicing elit.</p>
-            <p><a href="#" class="read-more">Continue Reading</a></p>
-          </div>
-        </div>
-        <div class="col-md-6 col-lg-3">
-          <div class="blog-entry">
-            <a href="/single.html" class="img-link">
-              <img src="/images/img_2_horizontal.jpg" alt="Image" class="img-fluid">
-            </a>
-            <span class="date">Apr. 14th, 2022</span>
-            <h2><a href="/single.html">Startup vs corporate: What job suits you best?</a></h2>
-            <p>Lorem ipsum dolor sit amet consectetur adipisicing elit.</p>
-            <p><a href="#" class="read-more">Continue Reading</a></p>
-          </div>
-        </div>
-        <div class="col-md-6 col-lg-3">
-          <div class="blog-entry">
-            <a href="/single.html" class="img-link">
-              <img src="/images/img_3_horizontal.jpg" alt="Image" class="img-fluid">
-            </a>
-            <span class="date">Apr. 14th, 2022</span>
-            <h2><a href="/single.html">UK sees highest inflation in 30 years</a></h2>
-            <p>Lorem ipsum dolor sit amet consectetur adipisicing elit.</p>
-            <p><a href="#" class="read-more">Continue Reading</a></p>
-          </div>
-        </div>
-        <div class="col-md-6 col-lg-3">
-          <div class="blog-entry">
-            <a href="/single.html" class="img-link">
-              <img src="/images/img_4_horizontal.jpg" alt="Image" class="img-fluid">
-            </a>
-            <span class="date">Apr. 14th, 2022</span>
-            <h2><a href="/single.html">Don’t assume your user data in the cloud is safe</a></h2>
-            <p>Lorem ipsum dolor sit amet consectetur adipisicing elit.</p>
-            <p><a href="#" class="read-more">Continue Reading</a></p>
-          </div>
-        </div>
-      </div>
-    </div>
-  </section>
   <!-- End posts-entry -->
+
+  <script>
+    $("#deletePost").click(function(){
+      if(confirm("게시글을 삭제하시겠습니까?")){
+        location.href="/blog/del"+$("#postId").val();
+      }
+    });
+  </script>
+
+
 
