--- a/views/layout.ejs
+++ b/views/layout.ejs
@@ -25,6 +25,8 @@
     <link rel="stylesheet" href="/css/style.css">
   
     <link rel="stylesheet" href="/css/flatpickr.min.css">
+
+    <link href="/css/summernote/summernote-lite.css" rel="stylesheet">
   
     <%- style%>
 
@@ -234,7 +236,14 @@
                 <span class="visually-hidden">Loading...</span>
               </div>
             </div>
-        
+
+
+
+            <!-- jquery cdn 라이브러리 참조 -->
+            <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.6.0/jquery.min.js"></script>
+
+            <script src="/js/summernote/summernote-lite.js"></script>
+            <script src="/js/summernote/summernote-ko-KR.js"></script>
         
             <script src="/js/bootstrap.bundle.min.js"></script>
             <script src="/js/tiny-slider.js"></script>
